# wgpu-boid-simulation

./: Cargo.toml  README.md
src/: boid.rs  compute.wgsl  engine.rs  lib.rs  main.rs  shader.wgsl  state.rs  vertex.rs
